8209802: Garbage collectors should register JFR types themselves to avoid build errors

Reviewed-by: kbarrett, tschatzl